# c_project

./: README.md
ch_10/: exercises.c
ch_2/: CMakeLists.txt  main.c
ch_3/: CMakeLists.txt  knowledge.md  main.c
ch_4/: CMakeLists.txt  knowledge.md  main.c
ch_5/: CMakeLists.txt  knowledge.md  main.c  practice.c
ch_6/: CMakeLists.txt  knowledge.md  main.c  practice.c
ch_7/: CMakeLists.txt  classroom_exercises.c
ch_8/: CMakeLists.txt  exercises.c
ch_9/: CMakeLists.txt  exercises.c  hotel.c  hotel.h  usehotel.c
